# division_engine_cpp

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  sign_app.sh
examples/: CMakeLists.txt  canvas_example.cpp  core_example.cpp  main.cpp  view_tree_example.cpp
include/division_engine/: color.hpp
include/division_engine/canvas/: border_radius.hpp  box_constraints.hpp  components.hpp  edge_insets.hpp  padding.hpp  rect.hpp  rect_drawer.hpp  render_manager.hpp  render_queue.hpp  renderer.hpp  size.hpp  size_variant.hpp  state.hpp  text_drawer.hpp
include/division_engine/canvas/components/: rect_instance.hpp  render_batch.hpp  render_bounds.hpp  render_order.hpp  render_texture.hpp  renderable_rect.hpp  renderable_text.hpp  with_texture.hpp
include/division_engine/canvas/view_tree/: any_view.hpp  column_view.hpp  decorated_box.hpp  decorated_box_view.hpp  list.hpp  list_view.hpp  padding.hpp  padding_view.hpp  size_view.hpp  sized_box.hpp  stack.hpp  stack_view.hpp  text.hpp  text_view.hpp  view.hpp  view_builder.hpp  view_traits.hpp
include/division_engine/core/: alpha_blend.hpp  context.hpp  context_helper.hpp  core_runner.hpp  exception.hpp  font_texture.hpp  lifecycle_manager.hpp  render_pass.hpp  render_pass_descriptor_builder.hpp  render_pass_instance_builder.hpp  types.hpp  uniform_data.hpp  vertex_buffer_data.hpp  vertex_data.hpp
include/division_engine/utility/: algorithm.hpp  file.hpp  meta.hpp
resources/: debug.plist
resources/shaders/canvas/: font.frag  font.frag.metal  font.vert.metal  rect.frag  rect.frag.metal  rect.vert.metal
resources/texts/: text.txt
src/canvas/: rect_drawer.cpp  render_queue.cpp  text_drawer.cpp
src/core/: context.cpp  context_helper.cpp  core_runner.cpp  font_texture.cpp  render_pass.cpp  render_pass_descriptor_builder.cpp  render_pass_instance_builder.cpp
